# mdbook-ai-pocket-reference

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: ai_pocket_reference.rs  lib.rs
src/templates/: footer.html  header.hbs  md_link.hbs
test_book/: book.toml
test_book/src/chapter_1/: index.md  sub_chapter_1.md  sub_chapter_2.md
tests/: test_preprocessor.rs
